--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </section>
     <!-- Footer-->
-    <footer class="py-5 bg-transparent">
+    <footer class="py-5 bg-rgb(122, 102, 86)">
         <div class="container">
             <p class="text-center text-dark">Mikaelmello.p@gmail.com</p>
         </div>
