--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!-- Responsive navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top ">
+    <nav class="navbar navbar-expand-lg navbar-light  sticky-top ">
         <div class="container ">
             <a class="navbar-brand  text-white" href="#here">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link text-white-50 lead" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-white-50 lead" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-white-50 lead" href="#contact">Projects</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <!-- Header - set the background image for the header in the line below-->
-    <header class="py-2 bg-image-fit" style="background-image: url('img/p1.jpg">
+    <header class="py-2 bg-image-fit" style="background-image: url('img/m21.jpg">
         <div class="text-center my-5">
             <img class="img-fluid rounded-circle mb-4" src="img/mikael.jpeg" alt="Mikael Mello"
                 style="width:215px; height:220px;" id="here" />
@@ -48,39 +48,66 @@
         </div>
     </header>
     <!-- Content section-->
-    <section class="py-5">
+    <section class="py-4">
         <div class="container my-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6" id="about">
-                    <h2>About</h2>
+                    <h3>About</h3>
                     <p class="lead">Lorem ipsum dolor sit amet.</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non incidunt laborum
-                        nobis, corrupti in cumque totam iste pariatur voluptates! Consequuntur blanditiis voluptates
-                        harum aliquid in.</p>
+                    <p class="mb-0">“Tentative efforts lead to tentative outcomes. Therefore, give yourself fully to your endeavors. Decide to construct your character through excellent actions and determine to pay the price of a worthy goal. The trials you encounter will introduce you to your strengths. Remain steadfast…and one day you will build something that endures: something worthy of your potential.”</p>
+                    <p>    ― Epictetus</p>
+
                 </div>
             </div>
         </div>
     </section>
     <!-- Image element - set the background image for the header in the line below-->
-    <div class="py-5 bg-image-fit" style="background-image: url('img/p2.jpg')">
+    <div class="py-5 bg-image-fit" style="background-image: url('img/m22.jpg')">
         <div style="height: 20rem"></div>
     </div>
     <!-- Content section-->
-    <section class="py-5">
+    <section class="py-4">
         <div class="container my-5">
             <div class="row justify-content-center">
                 <div class="col-lg-6" id="contact">
-                    <h2>Contact</h2>
-                    <p class="lead">Lorem ipsum dolor sit.</p>
-                    <p class="mb-0">mikaelmello.p@gmail.com</p>
+                    <h3>Projects</h3>
+                    <p class="lead">Check my Project down below.
+
+                    </p>
                 </div>
             </div>
         </div>
     </section>
+    <!--future carousel-->
+    <section class="py-5">
+        <div style="height: 20rem">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-6" id="contact">
+                        <h3>Wine Group Project</h3>
+                        <h4>vinhoUP</h4>
+                        <p class="lead">Website developed as platform to exposure and exchange of wine infos.</p>
+                        <a class="btn bg-transparent text-dark" href="google.com" role="button">vinhoUP</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--//future carousel//-->
+
+
     <!-- Footer-->
-    <footer class="py-5 bg-rgb(122, 102, 86)">
-        <div class="container">
-            <p class="text-center text-dark">Mikaelmello.p@gmail.com</p>
+    <footer class="text-center text-white py-3">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Linkedin -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/mikael-mello-425922188/" role="button"><i
+                    class="fab fa-linkedin-in"></i></a>
+            <!-- Github -->
+            <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/Cosmosmello" role="button"><i class="fab fa-github"></i></a>
+        </div>
+        <div class="text-center">
+            Mikaelmello.p@gmail.com
         </div>
     </footer>
 
